--- a/about/index.html
+++ b/about/index.html
@@ -9,7 +9,7 @@
   <title>About</title>
   <meta name='description' content='Vonge is a portfolio site template for Jekyll'>
 
-  <link rel="canonical" href="https://mattbrown88.github.io/vonge-jekyll-bookshop-template/about/">
+  <link rel="canonical" href="https://matthewlbrown.com/vonge-jekyll-bookshop-template/about/">
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image">
