--- a/index.html
+++ b/index.html
@@ -9,18 +9,18 @@
   <title>Vonge</title>
   <meta name='description' content='Vonge is a portfolio site template for Jekyll'>
 
-  <link rel="canonical" href="https://mattbrown88.github.io/vonge-jekyll-bookshop-template/">
+  <link rel="canonical" href="https://matthewlbrown.com/vonge-jekyll-bookshop-template/">
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Vonge">
   <meta name="twitter:description" content="Vonge is a portfolio site template for Jekyll">
-  <meta name="twitter:image:src" content="https://mattbrown88.github.io/vonge-jekyll-bookshop-template/images/01.jpg">
+  <meta name="twitter:image:src" content="https://matthewlbrown.com/vonge-jekyll-bookshop-template/images/01.jpg">
 
   <!-- Facebook OpenGraph -->
   <meta property="og:title" content="Vonge">
   <meta property="og:description" content="Vonge is a portfolio site template for Jekyll">
-  <meta property="og:image" content="https://mattbrown88.github.io/vonge-jekyll-bookshop-template/images/01.jpg">
+  <meta property="og:image" content="https://matthewlbrown.com/vonge-jekyll-bookshop-template/images/01.jpg">
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;900&display=swap" rel="stylesheet">
