--- a/project/big-airplane.html
+++ b/project/big-airplane.html
@@ -9,20 +9,20 @@
   <title>Big airplane</title>
   <meta name='description' content='Vonge is a portfolio site template for Jekyll'>
 
-  <link rel="canonical" href="https://mattbrown88.github.io/vonge-jekyll-bookshop-template/project/big-airplane">
+  <link rel="canonical" href="https://matthewlbrown.com/vonge-jekyll-bookshop-template/project/big-airplane">
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Big airplane – Vonge">
   <meta name="twitter:description" content="In qua quid est boni praeter summam voluptatem, et eam sempiternam? Cur post Tarentum ad Archytam? Qua ex cognitione facilior facta est investigatio rerum occultissimarum. Negat enim tenuissimo victu, id est contemptissimis escis et potionibus, minorem voluptatem.
 ">
-  <meta name="twitter:image:src" content="https://mattbrown88.github.io/vonge-jekyll-bookshop-template/images/project-5.jpg">
+  <meta name="twitter:image:src" content="https://matthewlbrown.com/vonge-jekyll-bookshop-template/images/project-5.jpg">
 
   <!-- Facebook OpenGraph -->
   <meta property="og:title" content="Big airplane – Vonge">
   <meta property="og:description" content="In qua quid est boni praeter summam voluptatem, et eam sempiternam? Cur post Tarentum ad Archytam? Qua ex cognitione facilior facta est investigatio rerum occultissimarum. Negat enim tenuissimo victu, id est contemptissimis escis et potionibus, minorem voluptatem.
 ">
-  <meta property="og:image" content="https://mattbrown88.github.io/vonge-jekyll-bookshop-template/images/project-5.jpg">
+  <meta property="og:image" content="https://matthewlbrown.com/vonge-jekyll-bookshop-template/images/project-5.jpg">
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;900&display=swap" rel="stylesheet">
