--- a/site/collections/_pages/index.html
+++ b/site/collections/_pages/index.html
@@ -2,13 +2,11 @@
 title: Home
 content_blocks:
   - _bookshop_name: hero
-    title: Hi there, I am Vanessa Marley
+    title: Hi there, I am Matt
     description_html: >-
-      <p><strong>Photographer</strong> and <strong>Visual Content
-      Strategist</strong> from Albany. I work as a lifestyle, product, and
-      landscape photographer, creating images for a diverse range of requests,
-      from online media to printed artwork.</p>
-    image: /images/01.jpg
+      <p><strong>Software Developer</strong> and <strong>Tech Strategist</strong> 
+        from Denver. I specializing in developing innovative tech solutions.</p>
+    image: /vonge-jekyll-bookshop-template/images/mattpic.jpeg
     image_alt: Vanessa Marley's picture
     cta_button: Get in touch
     cta_button_link: "#contact"
