--- a/site/components.html
+++ b/site/components.html
@@ -5,6 +5,6 @@ published: false
 
 <!--
     The bookshop_component_browser component loads an
-    interactive component library on your website. abg
+    interactive component library on your website. abgda
 -->
 {% bookshop_component_browser %}
