--- a/project/green-plant.html
+++ b/project/green-plant.html
@@ -16,13 +16,13 @@
   <meta name="twitter:title" content="Green Plant – Vonge">
   <meta name="twitter:description" content="In qua quid est boni praeter summam voluptatem, et eam sempiternam? Cur post Tarentum ad Archytam? Qua ex cognitione facilior facta est investigatio rerum occultissimarum. Negat enim tenuissimo victu, id est contemptissimis escis et potionibus, minorem voluptatem.
 ">
-  <meta name="twitter:image:src" content="https://matthewlbrown.com/vonge-jekyll-bookshop-template/images/project-9.jpg">
+  <meta name="twitter:image:src" content="https://matthewlbrown.com/vonge-jekyll-bookshop-template/vonge-jekyll-bookshop-template/images/project-9.jpg">
 
   <!-- Facebook OpenGraph -->
   <meta property="og:title" content="Green Plant – Vonge">
   <meta property="og:description" content="In qua quid est boni praeter summam voluptatem, et eam sempiternam? Cur post Tarentum ad Archytam? Qua ex cognitione facilior facta est investigatio rerum occultissimarum. Negat enim tenuissimo victu, id est contemptissimis escis et potionibus, minorem voluptatem.
 ">
-  <meta property="og:image" content="https://matthewlbrown.com/vonge-jekyll-bookshop-template/images/project-9.jpg">
+  <meta property="og:image" content="https://matthewlbrown.com/vonge-jekyll-bookshop-template/vonge-jekyll-bookshop-template/images/project-9.jpg">
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;900&display=swap" rel="stylesheet">
@@ -30,7 +30,7 @@
   <!-- Ionicons -->
   <link href="https://unpkg.com/ionicons@4.5.10-0/dist/css/ionicons.min.css" rel="stylesheet">
 
-  <link rel="stylesheet" href="/assets/main.css">
+  <link rel="stylesheet" href="/vonge-jekyll-bookshop-template/assets/main.css">
 </head>
 
 <body>
@@ -159,7 +159,7 @@
   <div class="row">
     <div class="col col-12">
       <div class="c-page-image animate">
-        <img loading="lazy" src="/vonge-jekyll-bookshop-template/images/project-9.jpg" alt="">
+        <img loading="lazy" src="/vonge-jekyll-bookshop-template/vonge-jekyll-bookshop-template/images/project-9.jpg" alt="">
       </div>
     </div>
   </div>
@@ -298,7 +298,7 @@
 </footer>
 <!-- end footer -->
 
-    <script src="/js/scripts.js"></script>
-    <script src="/js/common.js"></script>
+    <script src="/vonge-jekyll-bookshop-template/js/scripts.js"></script>
+    <script src="/vonge-jekyll-bookshop-template/js/common.js"></script>
 </body>
 </html>
