--- a/projects/index.html
+++ b/projects/index.html
@@ -28,7 +28,7 @@
   <!-- Ionicons -->
   <link href="https://unpkg.com/ionicons@4.5.10-0/dist/css/ionicons.min.css" rel="stylesheet">
 
-  <link rel="stylesheet" href="/assets/main.css">
+  <link rel="stylesheet" href="/vonge-jekyll-bookshop-template/assets/main.css">
 </head>
 
 <body>
@@ -169,7 +169,7 @@
 <article class="c-project-card col col-4 col-d-6 col-t-12">
   <div class="c-project-card__content">
     <a href="/project/green-plant" class="c-project-card__image">
-      <img loading="lazy" src="/images/project-9.jpg" alt="Green Plant">
+      <img loading="lazy" src="/vonge-jekyll-bookshop-template/images/project-9.jpg" alt="Green Plant">
     </a>
     <div class="c-project-card__info">
       <div class="c-project-card__info-wrap">
@@ -465,7 +465,7 @@
 </footer>
 <!-- end footer -->
 
-    <script src="/js/scripts.js"></script>
-    <script src="/js/common.js"></script>
+    <script src="/vonge-jekyll-bookshop-template/js/scripts.js"></script>
+    <script src="/vonge-jekyll-bookshop-template/js/common.js"></script>
 </body>
 </html>
