--- a/project/antelope-anyon.html
+++ b/project/antelope-anyon.html
@@ -14,13 +14,13 @@
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Antelope Canyon – Vonge">
-  <meta name="twitter:description" content="In qua quid est boni praeter summam voluptatem, et eam sempiternam? Cur post Tarentum ad Archytam? Qua ex cognitione facilior facta est investigatio rerum occultissimarum. Negat enim tenuissimo victu, id est contemptissimis escis et potionibus, minorem voluptatem.
+  <meta name="twitter:description" content="
 ">
   <meta name="twitter:image:src" content="https://matthewlbrown.com/vonge-jekyll-bookshop-template/images/project-8.jpg">
 
   <!-- Facebook OpenGraph -->
   <meta property="og:title" content="Antelope Canyon – Vonge">
-  <meta property="og:description" content="In qua quid est boni praeter summam voluptatem, et eam sempiternam? Cur post Tarentum ad Archytam? Qua ex cognitione facilior facta est investigatio rerum occultissimarum. Negat enim tenuissimo victu, id est contemptissimis escis et potionibus, minorem voluptatem.
+  <meta property="og:description" content="
 ">
   <meta property="og:image" content="https://matthewlbrown.com/vonge-jekyll-bookshop-template/images/project-8.jpg">
 
@@ -30,7 +30,7 @@
   <!-- Ionicons -->
   <link href="https://unpkg.com/ionicons@4.5.10-0/dist/css/ionicons.min.css" rel="stylesheet">
 
-  <link rel="stylesheet" href="/assets/main.css">
+  <link rel="stylesheet" href="/vonge-jekyll-bookshop-template/assets/main.css">
 </head>
 
 <body>
@@ -167,13 +167,15 @@
 <!--bookshop-live end-->
 
   <div class="page animate">
-    <p>In qua quid est boni praeter summam voluptatem, et eam sempiternam? Cur post Tarentum ad Archytam? Qua ex cognitione facilior facta est investigatio rerum occultissimarum. Negat enim tenuissimo victu, id est contemptissimis escis et potionibus, minorem voluptatem.</p>
+    <p><img src="/vonge-jekyll-bookshop-template/images/project-8.jpg" alt="Antelope Canyon" /></p>
 
-<p><img src="/images/image-example-3.jpg" alt="Palm trees" width="1200" height="900" /></p>
+<p>In qua quid est boni praeter summam voluptatem, et eam sempiternam? Cur post Tarentum ad Archytam? Qua ex cognitione facilior facta est investigatio rerum occultissimarum. Negat enim tenuissimo victu, id est contemptissimis escis et potionibus, minorem voluptatem.</p>
+
+<p><img src="/vonge-jekyll-bookshop-template/images/image-example-3.jpg" alt="Palm trees" width="1200" height="900" /></p>
 
 <p>Praeteritis, inquit, gaudeo. Praeteritis, inquit, gaudeo. Quod, inquit, quamquam voluptatibus quibusdam est saepe iucundius, tamen expetitur propter voluptatem. Scientiam pollicentur, quam non erat mirum sapientiae cupido patria esse cariorem. Non quaeritur autem quid naturae tuae consentaneum sit, sed quid disciplinae. Ita ne hoc quidem modo paria peccata sunt. Ita prorsus, inquam; Nunc ita separantur, ut disiuncta sint, quo nihil potest esse perversius. Virtutibus igitur rectissime mihi videris et ad consuetudinem nostrae orationis.</p>
 
-<p><img src="/images/image-example-4.jpg" alt="Sea" width="1200" height="900" /></p>
+<p><img src="/vonge-jekyll-bookshop-template/images/image-example-4.jpg" alt="Sea" width="1200" height="900" /></p>
 
 <p>Defecerit Sed isti ipsi, qui voluptate et dolore omnia metiuntur, nonne clamant sapienti plus semper adesse quod velit quam quod nolit? Quae quidem sapientes sequuntur duce natura tamquam videntes; Quod enim dissolutum sit, id esse sine sensu, quod autem sine sensu. Sunt omnia Longum est enim ad omnia respondere, quae a te dicta sunt. Nam cui proposito sit conservatio sui, necesse est huic partes quoque sui caras suo genere laudabiles servari.</p>
 
@@ -307,7 +309,7 @@
 </footer>
 <!-- end footer -->
 
-    <script src="/js/scripts.js"></script>
-    <script src="/js/common.js"></script>
+    <script src="/vonge-jekyll-bookshop-template/js/scripts.js"></script>
+    <script src="/vonge-jekyll-bookshop-template/js/common.js"></script>
 </body>
 </html>
