--- a/project/desk-setup.html
+++ b/project/desk-setup.html
@@ -30,7 +30,7 @@
   <!-- Ionicons -->
   <link href="https://unpkg.com/ionicons@4.5.10-0/dist/css/ionicons.min.css" rel="stylesheet">
 
-  <link rel="stylesheet" href="/assets/main.css">
+  <link rel="stylesheet" href="/vonge-jekyll-bookshop-template/assets/main.css">
 </head>
 
 <body>
@@ -307,7 +307,7 @@
 </footer>
 <!-- end footer -->
 
-    <script src="/js/scripts.js"></script>
-    <script src="/js/common.js"></script>
+    <script src="/vonge-jekyll-bookshop-template/js/scripts.js"></script>
+    <script src="/vonge-jekyll-bookshop-template/js/common.js"></script>
 </body>
 </html>
